--- a/dclass_application/templates/class.html
+++ b/dclass_application/templates/class.html
@@ -101,7 +101,7 @@
             </div>
             <div class="evaluation_ratio">
                 <table>
-                    <caption>評定平均 {{cl.average_evaluation}}</caption>
+                    <caption>前年度 評定平均 {{cl.average_evaluation}}</caption>
                     <tr>
                         <th>A</th>
                         <th>B</th>
